# get_started

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  the3
.github/workflows/: ccpp.yml
asset/: create_redis-cluster.sh
getting/: getting.sln
getting/ccia/: ccia.vcxproj  ccia.vcxproj.filters
getting/getting/: getting.vcxproj  getting.vcxproj.filters
include/: task.hxx  utility.chrono.h  utility.print.h  utility.random.h  utility.string_view.h  utility.strings.h
include/entity/: cicd.h
include/theapp/: my_request.h
include/utility/: chrono.h  print.h  random.h  strings.h  task.hxx
src/: entity.cicd.cpp  theapp.my_request.cpp  utility.chrono.cpp  utility.print.cpp  utility.random.cpp  utility.string_view.cpp  utility.strings.cpp
src/bingo/: CMakeLists.txt  main.cpp
src/ccia/: CMakeLists.txt  listing_c.atm.hpp  listing_c.bank_machine.hpp  listing_c.dispatcher.hpp  listing_c.entity.hpp  listing_c.interface_machine.hpp  listing_c.queue.hpp  listing_c.receiver.hpp  listing_c.sender.hpp  listing_c.template_dispatcher.hpp  main.cpp
src/cicd/: CMakeLists.txt  entity.cicd.cpp  main.cpp  theapp.my_request.cpp
src/entity/: cicd.cpp
src/shian/: CMakeLists.txt  ShiAN.cpp
src/theapp/: my_request.cpp
src/utility/: CMakeLists.txt  chrono.cpp  print.cpp  random.cpp  strings.cpp
